# neverplayalone_mcbench

./: .env.example  .gitignore  README.md  bench.yaml  pyproject.toml  resource_base.yaml  resource_catalog.yaml  resource_gathering.yaml
agents_examples/liar/: index.js  package.json
agents_examples/log_gatherer/: index.js  package-lock.json  package.json
agents_examples/oracle/: index.js  package.json
agents_examples/random_breaker/: index.js  package-lock.json  package.json
agents_examples/random_walker/: index.js  package-lock.json  package.json
agents_examples/stat_prober/: index.js  package.json
configs/resource_gathering/: base.yaml  catalog.yaml
docker/: bukkit.yml  docker-compose.yml
docker/agent/: Dockerfile  package-lock.json  package.json
mcbench/: __init__.py  batch.py  bench.py  cli.py  competition.py  config.py  container.py  paths.py  rcon.py  recorder.py  registry.py  replay_tool.py  resource_batch.py  runner.py  scoring.py  server.py  slot.py  trace.py
mcbench/agents/: __init__.py  _process_stream.py  base.py  docker.py  event_stream.py  sandboxed_agent.py  subprocess.py  subprocess_agent.py
mcbench/core/: __init__.py  base_task.py  batch.py  competition.py  container.py  runner.py  slot.py  task.py  trace.py
mcbench/evaluation/: batch_runner.py  evaluate.py  reference_world.py  run_slot.py  single_runner.py
mcbench/grader/: __init__.py  llm.py  pipeline.py  rules.py
mcbench/minecraft/: commands.py  rcon.py  rcon_client.py  server.py  server_probe.py  spawn.py  world.py
mcbench/missions/: __init__.py  base.py  registry.py
mcbench/models/: __init__.py  challenge.py  competition.py
mcbench/recorder/: index.js  package-lock.json  package.json  patch-prismarine-viewer.js
npabench/: __init__.py  cli.py  config.py
tests/: conftest.py  test_competition_scoring.py  test_docker_agent.py  test_resource_batch.py  test_runner.py  test_scoring.py
(+94 files in other folders)
